[package]
name = "sol-safekey"
version = "0.1.0"
edition = "2021"
default-run = "sol-safekey"

[dependencies]
base64 = "0.22.1"
ring = "0.17.8"
solana-sdk = "3.0.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0.0"
dotenv = "0.15"
rand = "0.8"
totp-rs = "5.4"
qrcode = "0.14"
rpassword = "7.0"
data-encoding = "2.4"

[lib]
name = "sol_safekey"
path = "src/lib.rs"

[[bin]]
name = "sol-safekey"
path = "src/main.rs"
