[package]
name = "sol-safekey"
version = "0.1.0"
edition = "2021"
default-run = "sol-safekey"
description = "A powerful command-line tool for secure Solana key management with Triple-Factor 2FA"
license = "MIT"
repository = "https://github.com/0xfnzero/sol-safekey"
documentation = "https://docs.rs/sol-safekey"
homepage = "https://github.com/0xfnzero/sol-safekey"
readme = "README.md"
keywords = ["solana", "encryption", "2fa", "wallet", "security"]
categories = ["cryptography", "command-line-utilities"]

# Core dependencies (always required)
[dependencies]
base64 = "0.22.1"
ring = "0.17.8"
solana-sdk = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2.4"
anyhow = "1.0"
hex = "0.4"

# Interactive UI dependencies (needed for bot integration)
colored = "3.0.0"
rpassword = "7.0"

# Optional: CLI-only dependencies
clap = { version = "4.5", features = ["derive"], optional = true }
qrcode = { version = "0.14", optional = true }

# Optional: 2FA/TOTP features
totp-rs = { version = "5.4", optional = true }
rand = { version = "0.8", optional = true }

# Optional: Solana operations
solana-client = { version = "3.0.8", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
atty = { version = "0.2", optional = true }
bincode = { version = "1.3", optional = true }
solana-commitment-config = { version = "3.0.0", optional = true }
sol-trade-sdk = { path = "../sol-trade-sdk", optional = true }

# Optional: Other utilities
dotenv = { version = "0.15", optional = true }
openssl = { version = "0.10.73", features = ["vendored"], optional = true }

[features]
default = []
cli = ["clap", "qrcode", "totp-rs", "rand"]
2fa = ["totp-rs", "rand", "qrcode"]
sol-trade-sdk = ["dep:sol-trade-sdk", "tokio", "solana-commitment-config"]
solana-ops = ["solana-client", "tokio", "atty", "bincode", "sol-trade-sdk", "solana-commitment-config"]
full = ["cli", "2fa", "solana-ops", "sol-trade-sdk", "dotenv", "openssl"]

[lib]
name = "sol_safekey"
path = "src/lib.rs"

[[bin]]
name = "sol-safekey"
path = "src/main.rs"
required-features = ["full"]
